# FinResearch-Agent

./: .editorconfig  .env.example  .gitignore  .npmrc  AGENTS.md  DESIGN.md  FinResearch_Agent_项目描述文件.md  Makefile  PRODUCT.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  uv.toml
.codex/: hooks.json
.github/workflows/: ci.yml
.impeccable/: design.json
apps/api/: Dockerfile  README.md  pyproject.toml
apps/api/app/: __init__.py  deps.py  main.py
apps/api/app/api/: __init__.py  assets.py  auth.py  backtest.py  factors.py  ohlcv.py  quality.py  sync.py  watchlists.py
apps/api/app/core/: __init__.py  config.py  security.py
apps/api/app/db/: __init__.py  base.py  seed.py  session.py
apps/api/app/models/: __init__.py  asset.py  backtest.py  factor.py  news.py  ohlcv.py  user.py  watchlist.py
apps/api/app/schemas/: asset.py  auth.py  backtest.py  factor.py  ohlcv.py  quality.py  sync.py  watchlist.py
apps/api/app/services/: __init__.py  ohlcv.py  quality.py  sync.py  yfinance.py
apps/api/app/services/backtest/: __init__.py  benchmark.py  engine.py  execution.py  metrics.py  persistence.py  prices.py  protocols.py  sensitivity.py  types.py  validation.py
apps/api/app/services/backtest/strategies/: __init__.py  buy_hold.py  equal_weight.py  factor.py  ma_crossover.py  momentum.py  registry.py  reversal.py
apps/api/app/services/datasources/: __init__.py  akshare.py  akshare_universe.py  base.py  tushare.py
apps/api/app/services/factors/: __init__.py  evaluation.py  jobs.py  momentum.py  protocols.py  quantile.py  ranking.py  service.py  technical.py  types.py
apps/api/app/services/sentiment/: __init__.py  protocols.py  types.py
apps/web/: .eslintrc.cjs  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
apps/web/src/: App.tsx  index.css  (+1 more)
apps/worker/: Dockerfile  README.md  pyproject.toml
apps/worker/worker/: __init__.py  main.py
apps/worker/worker/tasks/: __init__.py  backtest.py  factor.py  ohlcv.py
docs/: agent-design.md  architecture.md  backtesting-methodology.md  database-schema.md  factor-research-methodology.md  week1-progress.md  week2-progress.md  week3-progress.md
infra/docker/: README.md
infra/migrations/: README.md  alembic.ini  env.py
notebooks/: README.md  factor_research.ipynb  sentiment_experiment.ipynb
tests/: README.md  conftest.py  test_assets_api.py  test_auth.py  test_backtest_api.py  test_backtest_benchmark.py  test_backtest_engine.py  test_backtest_execution.py  test_backtest_ma_crossover.py  test_backtest_metrics.py  test_backtest_models.py  test_backtest_momentum.py  test_backtest_persistence.py  test_backtest_prices.py  test_backtest_reversal.py  test_backtest_sensitivity.py  test_backtest_strategies.py  test_backtest_trades.py  test_backtest_validation.py  test_data_sources.py  test_factor_api.py  test_factor_evaluation.py  test_factor_models.py  test_factor_momentum.py  test_factor_quantile.py  test_factor_ranking.py  test_factor_sensitivity.py  test_factor_service.py  test_factor_technical.py  test_factor_worker.py  test_news_models.py  test_ohlcv_api.py  test_ohlcv_ingestion.py  test_quality_report.py  test_seed_assets.py  test_sentiment_contracts.py  test_strategy_registry.py  test_universe_sync.py  test_watchlists_api.py
(+113 files in other folders)
