[project]
name = "finresearch-agent"
version = "0.1.0"
description = "LLM-powered Financial Research and Backtesting System — monorepo root"
readme = "README.md"
requires-python = ">=3.11"

[tool.uv]
package = false

[tool.uv.workspace]
members = ["apps/api", "apps/worker"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["notebooks", "infra/migrations/versions"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "N",   # pep8-naming
  "SIM", # flake8-simplify
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802", "N803"]
"infra/migrations/*" = ["E402"]
# FastAPI's canonical pattern is `param: T = Depends(...)`. B008 (function call
# in argument default) would flag every dependency-injected parameter, so we
# suppress it across the API app.
"apps/api/app/**/*.py" = ["B008"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers --tb=short"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["notebooks/", "infra/migrations/versions/"]
