[project]
name = "finresearch-api"
version = "0.1.0"
description = "FastAPI backend for FinResearch Agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "email-validator>=2.2.0",
  "sqlalchemy>=2.0.35",
  "alembic>=1.13.0",
  "psycopg[binary]>=3.2.0",
  "asyncpg>=0.29.0",
  "redis>=5.0.0",
  "rq>=1.16.0",
  "pyjwt>=2.9.0",
  "passlib[bcrypt]>=1.7.4",
  "bcrypt>=4.0.0,<4.1",
  "python-multipart>=0.0.10",
  "yfinance>=0.2.40",
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "httpx>=0.27.0",
  "tenacity>=9.0.0",
  "structlog>=24.4.0",
  "python-dotenv>=1.0.0",
  "exchange-calendars>=4.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
  "ipython>=8.27.0",
]
