[project]
name = "finresearch-worker"
version = "0.1.0"
description = "Background worker for FinResearch Agent (data sync, backtest, reports)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "redis>=5.0.0",
  "rq>=1.16.0",
  "sqlalchemy>=2.0.35",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "yfinance>=0.2.40",
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "tenacity>=9.0.0",
  "structlog>=24.4.0",
  "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["worker"]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
]
